--- a/static/style/editor.css
+++ b/static/style/editor.css
@@ -1,19 +1,34 @@
 .block {
     position: absolute;
     z-index: 0;
-    background-color: #f1f1f1;
+    background-color: #ffe6c5;
     border: none;
     text-align: center;
+    border-radius: 10px;
+    overflow: hidden;
+    user-select: none;
 }
 
 .blockheader {
-    padding: 5px;
+    padding: 5px 10px;
     cursor: move;
     z-index: 1;
-    background-color: #2196F3;
+    background-color: #5a757b;
     color: #fff;
+}
+
+.blocklabel {
+    line-height: 1.5;
+    margin: 5px 10px 10px;
 }
 
 .block:hover {
     z-index: 2;
+}
+
+.background {
+    position: absolute;
+    z-index: -999;
+    width: 100%;
+    height: 100%;
 }
