--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    {% block body %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+    {% block body %}{% endblock %}
     <!-- Begin page content -->
-    <main role="main" class="container-fluid">
+    <main role="main" class="container-fluid" id="container-main">
         {% block content %}{% endblock %}
     </main>
 </body>
