--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>{{title}}</title>
 
+    <link href="{{ static('style/base.css') }}" rel="stylesheet">
+
     {% block head %}{% endblock %}
 </head>
 
@@ -16,7 +18,6 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    {% block body %}{% endblock %}
     <!-- Begin page content -->
     <main role="main" class="container-fluid" id="container-main">
         {% block content %}{% endblock %}
