Добавлен package.json для компиляции скриптов

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    <!-- Begin page content -->
+    <!-- Контент страницы -->
     <main role="main" class="container-fluid" id="container-main">
         {% block content %}{% endblock %}
     </main>
