--- a/web/style/editor.css
+++ b/web/style/editor.css
@@ -1,6 +1,5 @@
 #editor-container {
     width: 100%;
     height: 100vh;
-
-    border: 1px solid green;
+    background: var(--aren-dark-blue);
 }
