--- a/templates/editor.html
+++ b/templates/editor.html
@@ -2,13 +2,12 @@
 
 {% block head %}
 <link href="{{ static('style/editor.css') }}" rel="stylesheet">
-<link href=" https://cdn.jsdelivr.net/npm/vis-network@9.1.6/styles/vis-network.min.css " rel="stylesheet">
-<script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+<link href=" https://cdn.jsdelivr.net/npm/vis-network@latest/styles/vis-network.min.css " rel="stylesheet">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vis-network@9.1.6/standalone/umd/vis-network.min.js"></script>
+<!-- Исходный код скрипта: web/script/editor.ts -->
+<script src="{{ static('script/editor.js') }}"></script>
 {% endblock %}
 
 {% block content %}
 <div id="editor-container"></div>
-
-<!-- Исходный код скрипта: web/script/editor.ts -->
-<script src="{{ static('script/editor.js') }}"></script>
 {% endblock %}
