--- a/web/style/base.css
+++ b/web/style/base.css
@@ -1,10 +1,3 @@
 :root {
-    /* https://lospec.com/palette-list/aren32 */
-    --aren-black: #1a1516;
-    --aren-cyan: #92e8c0;
-    --aren-dark-blue: #1d2235;
-}
-
-body {
-    background: var(--aren-black);
+    --bs-body-font-family: verdana;
 }
