--- a/web/style/editor.css
+++ b/web/style/editor.css
@@ -1,5 +1,9 @@
 #editor-container {
     width: 100%;
     height: 100vh;
-    background: var(--aren-dark-blue);
+    background: var(--bs-body-bg);
+}
+
+.vis-node {
+    color: var(--bs-body-color);
 }
