--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,9 @@
     <title>{{title}}</title>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootswatch/dist/{{ theme }}/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
