Улучшено пользовательское взаимодействие

--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -4,6 +4,8 @@
 {% endblock %}
 
 {% block content %}
-<p class="text-center fs-1">404</p>
-<p class="text-center fs-5">Тут ничего нет :(</p>
+<div class="text-center">
+    <p class="fs-1">404</p>
+    <p class="fs-5">Тут ничего нет :(</p>
+</div>
 {% endblock %}
