Улучшены скрипты компиляции

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block head %}
+<!-- Исходный код: web/style/editor.css -->
 <link href="{{ static('style/editor.css') }}" rel="stylesheet" crossorigin="anonymous">
 
-<!-- Исходный код скрипта: web/script/editor.ts -->
+<!-- Исходный код: web/script/editor.ts -->
 <script src="{{ static('script/editor.js') }}" type="module"></script>
 {% endblock %}
 
