--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootswatch/dist/{{ theme }}/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
+    <!-- Исходный код: web/style/base.css -->
     <link href="{{ static('style/base.css') }}" rel="stylesheet" crossorigin="anonymous">
 
     {% block head %}{% endblock %}
