--- a/templates/base.html
+++ b/templates/base.html
@@ -16,12 +16,13 @@
 
     <!-- Исходный код: web/style/base.css -->
     <link href="{{ static('style/base.css') }}" rel="stylesheet" crossorigin="anonymous">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700" rel="stylesheet" crossorigin="anonymous">
 
     {% block head %}{% endblock %}
 </head>
 
 <body>
-
     <!-- Контент страницы -->
     <main role="main" class="container-fluid" id="container-main">
         {% block content %}{% endblock %}
