--- a/web/style/base.css
+++ b/web/style/base.css
@@ -1,3 +1,3 @@
-:root {
-    --bs-body-font-family: 'Golos Text', verdana, sans-serif;
+body {
+    --bs-body-font-family: "Golos Text", sans-serif;
 }
