Исправлено перекрытие логотипа на главной странице

--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -14,12 +14,12 @@
         <div id="editor-container"></div>
     </div>
     <div class="col-3 bg-dark">
-        <button class="btn btn-info" id="btn_add">+</button>
-        <button class="btn btn-info" id="btn_delete">-</button>
-        <button class="btn btn-info" id="btn_connect">Соед.</button>
-        <button class="btn btn-info" id="btn_select_all">Все</button>
+        <button class="btn btn-info" id="btn-add">+</button>
+        <button class="btn btn-info" id="btn-delete">-</button>
+        <button class="btn btn-info" id="btn-connect">Соед.</button>
+        <button class="btn btn-info" id="btn-select_all">Все</button>
 
-        <input type="file" id="fileInput">
+        <input type="file" id="file-input" accept=".json, *.*">
     </div>
 </div>
 {% endblock %}
