--- a/web/style/index.css
+++ b/web/style/index.css
@@ -1,10 +1,19 @@
+/* Логотип отображается только если страница имеет достаточно места */
 #logo {
-	position: fixed;
-	width: 10%;
-	height: 10%;
-	top: 30px;
-	left: 30px;
+	display: none;
 }
+
+@media (min-width: 768px) and (min-height: 834px) {
+	#logo {
+		display: block;
+		position: fixed;
+		width: 10%;
+		height: 10%;
+		top: 5vh;
+		left: 5vh;
+	}
+}
+
 
 #title {
 	/* WebPRND */
