--- a/web/templates/not_found.html
+++ b/web/templates/not_found.html
@@ -4,8 +4,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="text-center">
-    <p class="fs-1">404</p>
+<div class="d-flex align-items-center justify-content-center" style="height: 82vh;">
+  <div class="text-center">
+    <p class="fs-1"><b>404</b></p>
     <p class="fs-5">Тут ничего нет :(</p>
+  </div>
 </div>
 {% endblock %}
