--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -19,7 +19,7 @@ class="btn btn-info"
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootswatch/dist/{{ theme }}/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch/dist/{{ theme() }}/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
     <!-- Исходный код: web/style/base.css -->
