--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -12,7 +12,7 @@
 <div class="row justify-content-md-center align-items-center">
   <div class="col col-lg-5">
     <h1 id="title" class="display-1">{{ title }}</h1>
-    <p id="desc" class="display-4">Генератор случайных чисел как веб-приложения с помощью Flask.</p>
+    <p id="desc" class="display-4">Генератор псведо-случайных чисел на Flask.</p>
   </div>
   <div class="col col-lg-5">
     <img class="line no-select" id="line-top" src="{{ static('img/index_line.svg') }}">
