--- a/web/style/index.css
+++ b/web/style/index.css
@@ -1,3 +1,41 @@
+#background {
+    z-index: -999;
+	min-height: 100%;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+    background: linear-gradient(50deg, #1d01b2, #b90000, #09ac00, #b46900, #7703ac, #03a6a1, #01a52b, #a30072);
+    background-size: 1600% 1600%;
+
+    -webkit-animation: AnimationName 90s ease infinite;
+    -moz-animation: AnimationName 90s ease infinite;
+    -o-animation: AnimationName 90s ease infinite;
+    animation: AnimationName 90s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 88%}
+    50%{background-position:100% 13%}
+    100%{background-position:0% 88%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 88%}
+    50%{background-position:100% 13%}
+    100%{background-position:0% 88%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:0% 88%}
+    50%{background-position:100% 13%}
+    100%{background-position:0% 88%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 88%}
+    50%{background-position:100% 13%}
+    100%{background-position:0% 88%}
+}
+
 /* Логотип отображается только если страница имеет достаточно места */
 
 #logo {
@@ -5,26 +43,66 @@
     opacity: 0;
     transition: opacity 0.5s;
 	position: fixed;
-	width: 200px;
-	height: 80px;
-	top: 4vh;
-	left: 4vh;
+	width: 500px;
+	height: 130px;
+	top: 0px;
+	left: 0px;
+}
+
+#logo_back_right {
+	display: block;
+    opacity: 0;
+	position: fixed;
+	transition: opacity 0.5s;
+	width: 500px;
+	height: 130px;
+	top: 0px;
+	right: 0px;
 }
 
 @media screen and (min-width: 768px) {
 	#logo {
         opacity: 1;
 	}
-}
-
-#title {
-	font-weight: 700;
-	color: var(--bs-gray-100);
+	#logo_back_right {
+        opacity: 1;
+	}
 }
 
 #desc {
-	font-weight: 400;
+	font-weight: 700;
 	color: var(--bs-gray-200);
+}
+
+.title {
+    font-weight: 1000;
+	color: var(--bs-gray-100);
+}
+
+#background_img {
+	z-index: -998;
+	min-height: 100%;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.Instruction {
+    position: absolute;
+    text-align: center;
+    top: 110vh;
+    width: 170vh;
+    font-weight: 700;
+    color: black;
+    background: white;
+    border-radius: 10vh 10vh 0px 0px;
+}
+
+.title_about {
+    font-weight: 1000;
+	color: black;
 }
 
 #line-bottom {
@@ -32,19 +110,32 @@
 	margin-top: 3vh;
 }
 
-/* https://stackoverflow.com/a/16548601/12245612 */
-#background {
-	z-index: -999;
-	min-height: 100%;
-	width: 100%;
-	height: auto;
-	position: fixed;
-	top: 0;
-	left: 0;
-	filter: blur(8px);
-}
-
 .line {
 	width: 44.5vh;
 	height: 44.5vh;
+}
+
+#about {
+    position: absolute;
+    top: 90vh;
+    height: 100px;
+    width: 200px;
+}
+
+#about_line {
+    position: absolute;
+    left: 7vh;
+    top: 4vh;
+    width: 7vh;
+	height: 7vh;
+}
+
+#about_text {
+    position: absolute;
+    left: 2vh;
+    text-align: center;
+    font-weight: 1000;
+    text-decoration: none;
+    font-size: 32px;
+	color: var(--bs-gray-100);
 }
