--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -28,6 +28,8 @@ class="btn btn-primary"
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700" rel="stylesheet"
         crossorigin="anonymous">
 
+    <link rel="icon" href="{{ static('img/logo.svg') }}">
+
     {% block head %}{% endblock %}
 </head>
 
