--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -25,6 +25,9 @@
         {{ error_message(error) }}
         {% endfor %}
     </p>
+    {% if message %}
+    {{ error_message(message) }}
+    {% endif %}
     <div>{{ message }}</div>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     <a href="/login">Уже есть аккаунт?</a>
