--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,11 +22,11 @@
     <img class="line no-select" id="line-top" src="{{ static('img/index_line.svg') }}">
     <img class="line no-select" id="line-bottom" src="{{ static('img/index_line.svg') }}">
   </div>
-    <div id="about">
+    <div id="about-pointer">
         <img id="about_line" class="no-select" src="{{ static('img/index_line_ab.svg') }}">
-        <a id="about_text" href="#anchor">О проекте</a>
+        <a id="about_text" href="#about">О проекте</a>
     </div>
-  <div id="anchor" class="Instruction">
+  <div id="about" class="Instruction">
       <div>
           <h1 class="title_about">WebPRND</h1>
           <p>
