--- a/web/style/base.css
+++ b/web/style/base.css
@@ -10,8 +10,13 @@ body {
 }
 
 .no-select {
-	/* Эти поля должны идти именно в таком порядке, так как
+    /* Эти поля должны идти именно в таком порядке, так как
 	иначе сайт сломается, вероятно, странная особенность Firefox */
-	user-select: none;
-	pointer-events: none;
+    user-select: none;
+    pointer-events: none;
+}
+
+.fullscreen {
+    width: 100vw;
+    height: 100vh;
 }
