Добавлен комментарий в editor.css

--- a/web/style/editor.css
+++ b/web/style/editor.css
@@ -1,7 +1,4 @@
-#editor-container {
-    background: var(--bs-body-bg);
-}
-
 body {
+    /* Исправляет баг с выходом редактора за границы экрана */
     overflow: hidden;
 }
