--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -10,10 +10,10 @@
 
 <div id="editor-container" class="fullscreen position-absolute top-0 start-0"></div>
 
-<!-- visible/invisible тут нужны для того, чтобы редактор 
-    не перекрывался невидимыми элементами -->
-<!-- Только что понял, что visible/invisible переводится как
-    видимо-невидимо -->
+{# visible/invisible тут нужны для того, чтобы редактор 
+    не перекрывался невидимыми элементами #}
+{# Только что понял, что visible/invisible переводится как
+    видимо-невидимо #}
 <div class="row fixed-bottom sticky-md-top justify-content-end p-2 invisible">
     <div class="col-md-2 bg-dark rounded p-2 visible">
         {{ button("+", "btn-add") }}
