--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,8 +7,10 @@ class="btn btn-primary m-1 {% for class in extra %} {{ class }} {%- endfor -%}"
     {{ text }}</button>
 {%- endmacro -%}
 
+{% set lang = lang() %}
+
 <!doctype html>
-<html lang="ru">
+<html lang="{{ lang }}">
 
 <head>
     <meta charset="utf-8">
@@ -23,19 +25,25 @@ class="btn btn-primary m-1 {% for class in extra %} {{ class }} {%- endfor -%}"
     <link href="https://cdn.jsdelivr.net/npm/bootswatch/dist/{{ theme() }}/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
-    {# Исходный код: web/style/base.css #}
-    <link href="{{ static('style/base.css') }}" rel="stylesheet" crossorigin="anonymous">
-
-    <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap" rel="stylesheet"
         crossorigin="anonymous">
 
     <link rel="icon" href="{{ static('img/logo.svg') }}">
+
+    {# Нужно тут исключительно для объявления шрифта,
+    чтобы не запрашивать base.css отдельно. Если вдруг
+    понадобится base.css, то пожалуйста, вынесите это туда же #}
+    <style>
+        body {
+            --bs-body-font-family: "Golos Text", sans-serif;
+        }
+    </style>
 
     {% block head %}{% endblock %}
 </head>
 
 <body>
-    <!-- Контент страницы -->
+    {# Контент страницы #}
     <main role="main" class="{{ container or 'container-fluid' }}" id="container-main">
         {% block content %}{% endblock %}
     </main>
