--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -1,26 +1,27 @@
 {% extends "base.html" %}
 
 {% block head %}
-<!-- Исходный код: web/script/editor.ts -->
-<script src="{{ static('script/editor.js') }}" type="module"></script>
+{# Исходный код: web/script/editor.ts #}
+<script src="{{ static('script/editor.js') }}" type="module" async></script>
 {% endblock %}
 
 {% block content %}
 <input type="file" id="file-input" class="invisible" accept=".json, *.*">
 
-<div id="editor-container" class="fullscreen position-absolute top-0 start-0"></div>
+<div id="editor-container" class="w-100 h-100 position-absolute top-0 start-0"></div>
 
-{# visible/invisible тут нужны для того, чтобы редактор 
-    не перекрывался невидимыми элементами #}
+{# visible/invisible тут нужны для того, чтобы редактор
+не перекрывался невидимыми элементами #}
 {# Только что понял, что visible/invisible переводится как
-    видимо-невидимо #}
+видимо-невидимо #}
 <div class="row fixed-bottom sticky-md-top justify-content-end p-2 invisible">
     <div class="col-md-2 bg-dark rounded p-2 visible">
-        {{ button("+", "btn-add") }}
-        {{ button("-", "btn-delete") }}
-        {{ button("Соед.", "btn-connect") }}
-        {{ button("Все", "btn-select-all") }}
+        {{ button("+", "btn-add", onclick="toggleNodesTab()") }}
+        {{ button("-", "btn-delete", onclick="deleteSelected()") }}
+        {{ button("Соед.", "btn-connect", onclick="connectSelected()") }}
+        {{ button("Все", "btn-select-all", onclick="selectAll()") }}
         {{ button("Открыть", "btn-open", onclick="document.getElementById('file-input').click()") }}
+        {{ button("Генерировать", "btn-generate", onclick="generate()") }}
     </div>
 </div>
 
@@ -29,6 +30,9 @@
         <h5 class="offcanvas-title" id="offcanvasResponsiveLabel">Добавить элемент</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#nodes-offcanvas"
             aria-label="Закрыть"></button>
+
+        <ul class="list-group" id="nodes-list">
+        </ul>
     </div>
 </div>
 {% endblock %}
