--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -15,14 +15,19 @@
 {# Только что понял, что visible/invisible переводится как
 видимо-невидимо #}
 <div class="row fixed-bottom sticky-md-top justify-content-end p-2 invisible">
-    <div class="col-md-2 bg-dark rounded p-2 visible">
-        <button {{ button_class() }} type="button" data-bs-toggle="offcanvas" data-bs-target="#nodes-offcanvas"
-            aria-controls="nodes-offcanvas" id="btn-toggle-offcanvas">+</button>
-        {{ button("-", "btn-delete", onclick="deleteSelected()") }}
-        {{ button("Соед.", "btn-connect", onclick="connectSelected()") }}
-        {{ button("Все", "btn-select-all", onclick="selectAll()") }}
-        {{ button("Открыть", "btn-open", onclick="document.getElementById('file-input').click()") }}
-        {{ button("Генерировать", "btn-generate", onclick="generate()") }}
+    <div class="col-md-2 m-0">
+        <div class="w-100 bg-dark rounded p-2 visible">
+            <button {{ button_class() }} type="button" data-bs-toggle="offcanvas" data-bs-target="#nodes-offcanvas"
+                aria-controls="nodes-offcanvas" id="btn-toggle-offcanvas">+</button>
+            {{ button("-", "btn-delete", onclick="deleteSelected()") }}
+            {{ button("Соед.", "btn-connect", onclick="connectSelected()") }}
+            {{ button("Все", "btn-select-all", onclick="selectAll()") }}
+            {{ button("Открыть", "btn-open", onclick="document.getElementById('file-input').click()") }}
+            {{ button("Генерировать", "btn-generate", onclick="generate()") }}
+        </div>
+
+        <div class="w-100 bg-dark rounded p-2 mt-2 form-group" id="params-editor">
+        </div>
     </div>
 </div>
 
