--- a/web/style/index.css
+++ b/web/style/index.css
@@ -35,38 +35,22 @@
 /* Логотип отображается только если страница имеет достаточно места */
 
 #logo {
-    display: block;
     opacity: 0;
     transition: opacity 0.5s;
     position: fixed;
-    width: 500px;
-    height: 130px;
-    top: 0px;
-    left: 0px;
+    width: 30vh;
+    height: auto;
+    top: 2vh;
+    left: 2vh;
 }
 
-#logo_back_right {
-    display: block;
-    opacity: 0;
-    position: fixed;
-    transition: opacity 0.5s;
-    width: 500px;
-    height: 130px;
-    top: 0px;
-    right: 0px;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
     #logo {
         opacity: 1;
     }
-
-    #logo_back_right {
-        opacity: 1;
-    }
 }
 
-#desc {
+.desc {
     font-weight: 700;
     color: var(--bs-gray-200);
 }
@@ -76,52 +60,81 @@
     color: var(--bs-gray-100);
 }
 
-.Instruction {
-    position: absolute;
-    text-align: center;
-    top: 110vh;
-    width: 170vh;
-    font-weight: 700;
-    color: var(--bs-body-color);
-    background: var(--bs-body-bg);
-    border-radius: 10vh 10vh 0px 0px;
-}
-
-.title_about {
-    font-weight: 1000;
-}
-
-#line-bottom {
-    transform: scale(1, -1);
-    margin-top: 3vh;
-}
-
-.line {
-    width: 44.5vh;
-    height: 44.5vh;
-}
-
-#about-pointer {
-    position: absolute;
-    top: 90vh;
-    height: 100px;
-    width: 200px;
-}
-
-#about_line {
-    position: absolute;
-    left: 7vh;
-    top: 4vh;
-    width: 7vh;
-    height: 7vh;
-}
-
-#about_text {
-    position: absolute;
-    left: 2vh;
-    text-align: center;
-    font-weight: 1000;
+a {
     text-decoration: none;
-    font-size: 32px;
-    color: var(--bs-gray-100);
+    color: var(--bs-success);
+}
+
+code{
+    font-weight: 700;
+    color: var(--bs-info);
+}
+
+.items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#about-group {
+    z-index: -998;
+    position: absolute;
+    top: 110vh;
+    left: 0px;
+    right: 0px;
+    min-height: 100vh;
+    height: auto;
+    background-color: var(--bs-body-bg);
+}
+
+#about-title {
+    z-index: -997;
+    position: absolute;
+    top: 5vh;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    background: blue;
+}
+
+#about-info {
+    z-index: -997;
+    position: absolute;
+    top: 15vh;
+    left: 3vw;
+    right: 3vw;
+    height: auto;
+}
+
+#middle {
+    z-index: -998;
+    position: absolute;
+    top: 30vh;
+    left: 10vw;
+    right: 10vw;
+}
+
+#button_img {
+    max-width: 400px;
+    width: 80vw;
+    height: auto;
+}
+
+#contacts {
+    z-index: -997;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 20vh;
+    width: 100vw;
+    background: green;
+}
+
+.icons {
+    width: 25vh;
+    height: auto;
+}
+
+#middle {
+    background: yellow;
 }
