--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,74 +9,80 @@
 <div id="background" class="absolute-cover"></div>
 
 <div id="header">
-    <img id="logo" class="no-select" src="{{ static('img/logo_up.svg') }}" alt="header_left">
-    <img id="logo_back_right" class="no-select" src="{{ static('img/logo_up_back.svg') }}" alt="header_right">
+    <img id="logo" class="no-select" src="{{ static('img/logo.svg') }}" alt="logo">
 </div>
 
-<div class="row justify-content-md-center align-items-center">
-  <div class="col col-lg-5">
+<div id="middle" class="row">
+  <div id="start_title" class="col">
     <h1 class="display-1 title">{{ title }}</h1>
-    <p id="desc" class="display-4">Генератор псевдо-случайных чисел на Flask.</p>
+    <p id="main-title" class="display-4 desc">Генератор псевдо-случайных чисел на Flask.</p>
   </div>
-  <div class="col col-lg-5">
-    <img class="line no-select" id="line-top" src="{{ static('img/index_line.svg') }}">
-    <img class="line no-select" id="line-bottom" src="{{ static('img/index_line.svg') }}">
+  <div id="start_button" class="col items">
+    <a href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">
+      <img id="button_img" class="no-select" src="{{ static('img/beta_button.svg') }}"/>
+    </a>
   </div>
-    <div id="about-pointer">
-        <img id="about_line" class="no-select" src="{{ static('img/index_line_ab.svg') }}">
-        <a id="about_text" href="#about">О проекте</a>
+</div>
+<div id="about-group">
+    <div>
+      <h1 id="about-title" class="display-2 title">О проекте</h1>
     </div>
-  <div id="about" class="Instruction">
-      <div>
-          <h1 class="title_about">WebPRND</h1>
-          <p>
-              Реализация генератора псевдо-случайных чисел как веб-приложения с помощью Flask.
-          </p>
+    <div id="about-info" class="row items">
+      <div id="initial-idea" class="col">
+        <h1 class="title ">Изначальная задумка</h1>
+        <p class="desc">
+          У меня было желание сделать более удобный генератор псевдо-случайнах чисел, чтобы людям было приятно им пользоваться. Таковым является этот проект.<br><br>
+          Для настройки генераторов псевдо-случайных чисел по моей задумке будет использоваться псевдо-визуальное программирование. Проще говоря, построение логики из блоков.<br><br>
+          Как и в "классическом" CoolPRND, будет три типа блока: сид, генератор и вывод. Так как генерация случайных чисел - это дорогая для компьютера операция, было решено ввести систему авторизации пользователей.<br><br>
+          Придумав такую классную идею, я перешёл к описанию архитектуры проекта. Внизу текста я оставил ссылки, которые я или другой член команды посчитал полезными при работе над данным проектом.
+        </p>
       </div>
-      <div>
-          <h3 class="title_about">Обращение ко всем потенциальным разработчикам этого проекта</h3>
-          <p>
-              Обновляйте этот документ по мере необходимости, в нём расписана основная архитектура и суть проекта.
-          </p>
+      <div id="architecture" class="col">
+        <h1 class="title">Архитектура</h1>
+        <ol class="desc">
+          <li>
+            Всё логика сайта состоит из сервисов, работающих с помощью <a class="link" href="https://flask.palletsprojects.com/en/latest/blueprints/" target="_blank">flask.Blueprint</a>. На данный момент выделены следующие сервисы:
+            <ul>
+              <li><a class="link" href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">pages/</a> - отвечает за страницы, разделён на несколько модулей.</li>
+              <li><a class="link" href="https://github.com/zatrit/webprnd/blob/master/api.py" target="_blank">api.py/</a> - отвечает за API. Так как API небольшое, то это всего один blueprint.</li>
+            </ul>
+          </li>
+          <li>
+            Все модели для баз данных находятся в data/.
+          </li>
+          <li>
+            <code># type: ignore</code> и прочие подобные комментарии нужны для того, чтобы у меня не ругался линтер. Благодаря ему я могу писать код без ошибок в VSCode.
+          </li>
+          <li>
+            Для запуска всех тестов используйте команду <code>py test</code> или <code>python test</code>
+          </li>
+          <li>
+            Для компиляции фронт-энда существует скрипт <a class="link" href="https://github.com/zatrit/webprnd/blob/master/api.py" target="_blank">build.py/</a>
+          </li>
+          <li>
+            Желательно использовать явную типизацию в коде на Python и TypeScript в страницах, чтобы не допускать некоторых ошибок
+          </li>
+          <li>
+            Для отрисовки редактора блочной логики используется библиотека vis.js.
+          </li>
+        </ol>
       </div>
-      <div>
-          <h2 class="title_about">Изначальная задумка</h2>
-          <p>
-              У меня было желание сделать более удобный генератор псевдо-случайнах чисел, чтобы людям было приятно им пользоваться.
-              Таковым является этот проект.<br><br>
-              Для настройки генераторов псевдо-случайных чисел по моей задумке будет использоваться псевдо-визуальное программирование.
-              Проще говоря, построение логики из блоков.<br><br>
-              Как и в "классическом" CoolPRND, будет три типа блока: сид, генератор и вывод.
-              Так как генерация случайных чисел - это дорогая для компьютера операция, было решено ввести систему авторизации пользователей.<br><br>
-              Придумав такую классную идею, я перешёл к описанию архитектуры проекта.
-              Внизу текста я оставил ссылки, которые я или другой член команды посчитал полезными при работе над данным проектом.
-          </p>
+    </div>
+    <div id="contacts" class="row">
+      <div id="logo_bot" class="col items">
+        <img id="logo_bottom" class="no-select icons" src="{{ static('img/logo.svg') }}" alt="logo">
       </div>
-      <div>
-          <h2 class="title_about">Архитектура</h2>
-          <p>
-              Всё логика сайта состоит из сервисов, работающих с помощью
-              <a href="https://flask.palletsprojects.com/en/latest/blueprints/" rel="nofollow">flask.Blueprint</a>.
-              На данный момент выделены следующие сервисы:<br><br>
-              <a href="https://github.com/zatrit/webprnd/blob/master/pages.py">pages.py</a> - отвечает за страницы.<br>
-              <a href="https://github.com/zatrit/webprnd/blob/master/api.py">api.py</a> - отвечает за API. Так как API небольшое, то это всего один blueprint.<br><br>
-              Все модели для баз данных находятся в <em>data/</em>.<br>
-              <code># type: ignore</code> и прочие подобные комментарии нужны для
-              того, чтобы у меня не ругался <a href="https://ru.wikipedia.org/wiki/Lint" rel="nofollow">линтер</a>.
-              Благодаря ему я могу писать код без ошибок в VSCode.<br>
-              Для запуска всех тестов используйте команду <code>py test</code> или
-              <code>python test</code><br>
-              Для компиляции бэкэнда существует скрипт <a href="https://github.com/zatrit/webprnd/blob/master/build.py">build.py</a>
-              Желательно использовать явную типизацию в коде на Python и
-              TypeScript в страницах, чтобы не допускать некоторых ошибок.<br>
-              Для отрисовки редактора блочной логики используется библиотека
-              vis.js.<br>
-          </p>
+      <div id="rights" class="col desc items">
+        <a class="link" href="https://www.youtube.com/watch?v=KBu-6pLXCoA" target="_blank">Никакие права не защищены!</a>
       </div>
-      <div>
-          <h2 class="title_about">Ссылки</h2>
-          <p>vis.js: <a href="https://visjs.org" rel="nofollow">https://visjs.org</a></p>
+      <div id="get_api" class="col desc items">
+        <a class="link" href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">Получить ключ API</a>
       </div>
-  </div>
+      <div id="github" class="col items">
+        <a href="https://github.com/zatrit/webprnd/" target="_blank">
+        <img id="github_logo" class="icons" src="{{ static('img/github_logo.svg') }}"/>
+        </a>
+      </div>
+    </div>
 </div>
 {% endblock %}
