--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
     <p id="main-title" class="display-4 desc">Генератор псевдо-случайных чисел на Flask.</p>
   </div>
   <div id="start_button" class="col items">
-    <a href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">
+    <a href="/static" target="_blank">
       <img id="button_img" class="no-select" src="{{ static('img/beta_button.svg') }}"/>
     </a>
   </div>
@@ -76,7 +76,7 @@
         <a class="link" href="https://www.youtube.com/watch?v=KBu-6pLXCoA" target="_blank">Никакие права не защищены!</a>
       </div>
       <div id="get_api" class="col desc items">
-        <a class="link" href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">Получить ключ API</a>
+        <a class="link" href="/obtain" target="_blank">Получить ключ API</a>
       </div>
       <div id="github" class="col items">
         <a href="https://github.com/zatrit/webprnd/" target="_blank">
