--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,15 +19,15 @@
   </div>
   <div id="start_button" class="col items">
     <a href="/static" target="_blank">
-      <img id="button_img" class="no-select" src="{{ static('img/beta_button.svg') }}"/>
+      <img id="button_img" class="no-select" src="{{ static('img/start_button.svg') }}"/>
     </a>
   </div>
 </div>
-<div id="about-group">
+<div id="about-group" class="">
     <div>
       <h1 id="about-title" class="display-2 title">О проекте</h1>
     </div>
-    <div id="about-info" class="row items">
+    <div id="about-info" class="row">
       <div id="initial-idea" class="col">
         <h1 class="title ">Изначальная задумка</h1>
         <p class="desc">
@@ -70,7 +70,9 @@
     </div>
     <div id="contacts" class="row">
       <div id="logo_bot" class="col items">
+        <a href="https://www.youtube.com/watch?v=xm3YgoEiEDc" target="_blank">
         <img id="logo_bottom" class="no-select icons" src="{{ static('img/logo.svg') }}" alt="logo">
+        </a>
       </div>
       <div id="rights" class="col desc items">
         <a class="link" href="https://www.youtube.com/watch?v=KBu-6pLXCoA" target="_blank">Никакие права не защищены!</a>
@@ -84,5 +86,6 @@
         </a>
       </div>
     </div>
+    <div id="background-bottom-image"></div>
 </div>
 {% endblock %}
