Добавлена возможность сохранить проект

--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -23,6 +23,7 @@
             {{ button("Соед.", "btn-connect", onclick="connectSelected()") }}
             {{ button("Все", "btn-select-all", onclick="selectAll()") }}
             {{ button("Открыть", "btn-open", onclick="document.getElementById('file-input').click()") }}
+            {{ button("Сохранить", "btn-save", onclick="saveProject()") }}
             {{ button("Генерировать", "btn-generate", onclick="generate()") }}
         </div>
 
