Исправлена ссылка на редактор

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
     <p id="main-title" class="display-4 desc">Генератор псевдо-случайных чисел на Flask.</p>
   </div>
   <div id="start_button" class="col items">
-    <a href="/static" target="_blank">
+    <a href="/editor" target="_blank">
       <img id="button_img" class="no-select" src="{{ static('img/start_button.svg') }}"/>
     </a>
   </div>
